# proteus-runtime-public

./: .gitignore  .pre-commit-config.yaml  .testenv.tmpl  README.md  project.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  sonar.yml  test.yml
proteus/: __init__.py  api.py  config.py  logger.py  oidc.py
requirements/: dev.txt  prod.txt
tests/: conftest.py  test_bucket.py  test_calculator.py  test_download.py  test_post_file.py  test_reporting.py  test_runs_authentified.py
tests/features/: bucket.feature  calculator.feature  download.feature  post_file.feature  reporting.feature  runs_authentified.feature
tests/test_upload/: _.feature  _test.py  given.py  then.py  when.py
