[tool.poetry]
name = "proteus"
version = "0.1.4"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
python-json-logger = "^2.0.4"
requests = "^2.28.1"
certifi = "2022.6.15"
setuptools = "^63.2.0"

[tool.poetry.dev-dependencies]
python-dotenv = "0.19.2"
black = "22.1.0"
pre-commit = "2.9.3"
pytest = "7.1.1"
pytest-mock = "3.5.1"
requests-mock = "1.8.0"
pytest-bdd = "5.0.0"

